--- a/style.css
+++ b/style.css
@@ -61,10 +61,10 @@ z-index: 1;
 }
 
 .stars i {
-        color:##FFD700;
+        color:#FFD700;
 }
     
 .stars span{
-        color:##FFD700;
+        color:#FFD700;
 }
 
